<resources>
    <string name="app_name">DartsGames</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="open">Open</string>
    <string name="Close">Close</string>
    <string name="welcome_to_dartsgames">Welcome to DartsGames</string>
    <string name="enter">Enter</string>
    <string name="new_game">New Game</string>
    <string name="scores">Scores</string>
    <string name="continue_game">Continue Game</string>
    <string name="game_type">Game Type</string>
    <string name="player">Player</string>
    <string name="player_name">Player Name</string>
    <string name="add_player">Add Player</string>
    <string name="play">PLAY!</string>
    <string name="color">Color</string>
    <string name="default_score_501">501</string>
    <string name="player_number_lbl">Player</string>
    <string name="dartboard">Dartboard</string>
    <string name="to_main_menu">To main menu</string>
    <string name="current_weather">Current weather</string>
    <string name="description">Description:</string>
    <string name="temperature">Temperature:</string>
    <string name="loading">...loading...</string>
    <string name="c">C°</string>
    <string name="ok">OK</string>
    <string name="statistics">Statistics</string>
    <string name="undo_throw">Undo throw</string>
    <string name="missed_board">Missed board</string>
    <string name="home">Home</string>
    <string name="info">info</string>
    <string name="checkout_is_available">Checkout is Available</string>
    <string name="possible_checkouts">Possible checkouts:</string>
    <string name="select_ongoing_game">Select ongoing game</string>
    <string name="leading">Leading:</string>
    <string name="score">Score:</string>
    <string name="delete_game">Delete Game</string>
    <string name="game_type_colon">Game Type:</string>
    <string name="select_ended_game">Select ended game</string>
    <string name="winner_colon">Winner:</string>
    <string name="dart_1">Dart 1:</string>
    <string name="dart_2">Dart 2:</string>
    <string name="dart_3">Dart 3:</string>
    <string name="average_score">Average Score:</string>
    <string name="player_colon">Player:</string>
    <string name="highest_thrown">Highest Thrown:</string>
    <string name="darts_thrown">Darts Thrown:</string>
    <string name="darts_hit">Darts Hit:</string>
    <string name="darts_missed">Darts Missed:</string>
    <string name="hit_percentage">Hit Percentage:</string>
    <string name="miss_percentage">Miss Percentage:</string>
    <string name="check_out_score">Check Out Score:</string>
    <string name="ongoing_darts_tournaments">Ongoing Darts Tournaments</string>
    <string name="competition">Competition:</string>
    <string name="season">Season:</string>
    <string name="competitors">Competitors:</string>
    <string name="match_status">Match status:</string>
    <string name="checkout_percentage">Checkout percentage:</string>
    <string name="checkouts">Checkouts:</string>
    <string name="checkouts_100"><![CDATA[Checkouts > 100:]]></string>
    <string name="highest_checkout">Highest checkout:</string>
    <string name="times_100"><![CDATA[Times > 100:]]></string>
    <string name="times_140"><![CDATA[Times > 140:]]></string>
    <string name="times_180">Times 180:</string>
    <string name="see_previous_tournaments">See previous tournaments</string>
    <string name="vs">vs</string>
    <string name="start_time">Start time:</string>
    <string name="see_tournament">See tournament</string>
    <string name="possible_checkout">possible_checkout</string>
</resources>