<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".fragments.NewGameFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width='match_parent'
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/lblGameType"
            style="@style/label"
            android:text="@string/game_type"
            app:layout_constraintBottom_toTopOf="@+id/spinnerGameTypes"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:layout_constraintVertical_chainStyle="packed" />

        <Spinner
            android:id="@+id/spinnerGameTypes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toTopOf="@+id/lblPlayer"
            app:layout_constraintStart_toStartOf="@+id/lblGameType"
            app:layout_constraintTop_toBottomOf="@+id/lblGameType"
            android:spinnerMode="dropdown"/>

        <TextView
            android:id="@+id/lblPlayer"
            android:layout_marginTop="24dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/player"
            app:layout_constraintBottom_toTopOf="@+id/editTextPlayerName"
            app:layout_constraintStart_toStartOf="@+id/spinnerGameTypes"
            app:layout_constraintTop_toBottomOf="@+id/spinnerGameTypes"
            style="@style/label"/>

        <EditText
            android:id="@+id/editTextPlayerName"
            style="@style/label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/player_name"
            app:layout_constraintBottom_toTopOf="@+id/butAddPlayer"
            app:layout_constraintStart_toStartOf="@+id/lblPlayer"
            app:layout_constraintTop_toBottomOf="@+id/lblPlayer" />

        <Button
            android:id="@+id/butAddPlayer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="32dp"
            android:text="@string/add_player"
            app:layout_constraintBottom_toTopOf="@+id/recyclerView"
            app:layout_constraintStart_toStartOf="@+id/editTextPlayerName"
            app:layout_constraintTop_toBottomOf="@+id/editTextPlayerName"
            style="@style/regularButton"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>